--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "vscode-mwscript-syntax",
-    "publisher": "saintmercury",
+    "publisher": "maxhenzerling",
     "displayName": "vscode-mwscript-syntax",
     "description": "Morrowind Scripting Language syntax highlighting",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "engines": {
         "vscode": "^1.58.0"
     },
